# alpacahack-tools

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: alpacahack_url.rs  challenge_info.rs  cli.rs  commands.rs  config.rs  domain.rs  editor.rs  fetch.rs  main.rs  prelude.rs  project.rs
src/commands/: config.rs  new.rs  open.rs
src/commands/new/: fetch.rs  project.rs
src/commands/new/fetch/: analyse.rs
src/domain/: alpacahack_url.rs  challenge_info.rs  challenge_page.rs  challenge_url.rs  workspace.rs
src/domain/challenge_page/: parse.rs
src/fetch/: analyse.rs
src/prelude/: alpacahack_url.rs  challenge_info.rs
